--- a/style.css
+++ b/style.css
@@ -2,10 +2,17 @@
     width:50px;
     height: 50px;
     padding-top: 20px;
+    background-color: #0ABAB5;
+    padding: 20px;
+    border-radius: 20px;
 }
 .job{
     display: flex;
     gap: 20px;
+}
+.text{
+    display: flex;
+    gap:20px;
 }
 .container{
     display: flex;
@@ -16,4 +23,12 @@
     border-radius: 20px;
     height:300px;
     width: 300px;
+}
+.services{
+    display: flex;
+
+}
+.pekerjaan{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
 }
